--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,4 +45,6 @@
     <string name="logout">Logout </string>
     <string name="notifications">Turn off notifications </string>
     <string name="create_group">create group</string>
+
+    <string name="userPasswdKV">com.cs407.lab5_milestone.userPasswdKV</string>
 </resources>
