--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,4 +45,5 @@
     <string name="logout">Logout </string>
     <string name="notifications">Turn off notifications </string>
     <string name="create_group">create group</string>
+    <string name="enter_group_name">Enter Group Name</string>
 </resources>
