Added group functionality, still need to implement connections between tables for group.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,4 +48,5 @@
     <string name="create_transaction">Create Transaction</string>
     <string name="userPasswdKV">com.cs407.lab5_milestone.userPasswdKV</string>
     <string name="splitPercentage">Split percentage</string>
+    <string name="enter_group_name">Enter Group Name</string>
 </resources>
