Added Budget tag input to addTransaction page, and passed the budgetTag into the transactions for use in budgeting. Also fixed rounding error for split percentage.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,4 +49,5 @@
     <string name="userPasswdKV">com.cs407.lab5_milestone.userPasswdKV</string>
     <string name="create_transaction">Create Transaction</string>
     <string name="splitPercentage">Split percentage</string>
+    <string name="budgetTag">Budget Tag:</string>
 </resources>
